# rna-aproximador-funcoes

./: .gitignore  main.py  pyproject.toml
