[tool.poetry]
name = "lab5"
version = "0.1.0"
description = ""
authors = ["Enzo Bozzani <enzobozzani@ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
